z-index fix

--- a/assets/css/ffw-alerts-front.css
+++ b/assets/css/ffw-alerts-front.css
@@ -35,7 +35,7 @@ a[href="#alert"].hide {
 }
 
 #alerts .alert .container {
-  z-index: 9999999;
+  z-index: 99999999;
 }
 
 #alerts .alert .alert-title {
